bundles/AdminBundle/Resources/public/css/admin.css
/* ... */
.pimcore_property_asset .x-grid3-td-name div.x-grid3-cell-inner {
    background: url(/bundles/pimcoreadmin/img/icon/asset.png) left top no-repeat !important;
}

.pimcore_property_object .x-grid3-td-name div.x-grid3-cell-inner {
    background: url(/bundles/pimcoreadmin/img/icon/database.png) left top no-repeat !important;
}

.pimcore_property_bool .x-grid3-td-name div.x-grid3-cell-inner {
    background: url(/bundles/pimcoreadmin/img/icon/tick.png) left top no-repeat !important;
}

.pimcore_property_select .x-grid3-td-name div.x-grid3-cell-inner {
    background: url(/bundles/pimcoreadmin/img/icon/select.png) left top no-repeat !important;
}

.pimcore_property_text .x-grid3-td-name div.x-grid3-cell-inner {
    background: url(/bundles/pimcoreadmin/img/icon/textfield.png) left top no-repeat !important;
}


.pimcore_property_droptarget {
    min-height: 18px;
    background: url(/bundles/pimcoreadmin/img/flat-color-icons/target.svg) right 5px center/17px no-repeat !important;
}

.pimcore_property_inherited {
    color: #ccc !important;
}


.pimcore_properties_hidden_checkcol .x-grid-cell-checkcolumn div {
    display:none !important;
}

.pimcore_properties_hidden_row {
    display:none !important;
}

.pimcore_plugin {
    width: 600px;
    overflow: hidden;

}
.pimcore_plugin_info{
    width: 300px;
    float:left;
    font-family:arial,tahoma,verdana,sans-serif;font-size:11px;
}

.pimcore_plugin_info table th {
    background: #E5E5E5;
    padding: 5px 20px ;
}
.pimcore_plugin_info table td {
    border-bottom: 1px solid #E5E5E5;
    padding: 5px 20px ;
}

.pimcore_plugin_settings {
    width: 420px;
    height: 340px;
    float:left;
}
.pimcore_plugin_settings iframe {
    width: 420px;
    height: 340px;

}

.tree_node_error {
    text-decoration: line-through;
    color: #ff0000;
}

/* fix for Ext.ux.tree.PagingTreeLoader */
.x-btn-icon .x-btn-small .x-btn-text{
    height: 13px;
    width: 13px;
}

/*
.x-tree-node-ct {
	clear: both !important;
}

.x-tree-pageing {
	float: left;
	width: 75px;
	overflow: hidden;
}*/


.pimcore_update_message {
    border: 1px solid #000;
    padding: 10px;
    margin: 0 0 20px 0;
    background: #f8f8f8;
    color: #333333;
}


.object_mendatory_error {
    border: 2px dashed red !important;
}

.object_value_inherited {
    filter: Alpha(opacity=60) !important;
    opacity: 0.6 !important;
}

.object_value_inherited .x-form-field {
    background-image: none !important;
    background-color: #dad9d9 !important;
}

.grid_value_inherited {
    color: #606060 !important;
    filter: Alpha(opacity=60) !important;
    opacity: 0.6 !important;
    background: #dad9d9 url(/bundles/pimcoreadmin/img/inheritance-indicator.png) top left no-repeat !important;
}

.grid_value_noview {
    color: #606060 !important;
    filter: Alpha(opacity=60) !important;
    opacity: 0.6 !important;
    pointer-events: none;
    background: #dad9d9 url(/bundles/pimcoreadmin/img/flat-color-icons/lock.svg) center center/16px no-repeat !important;
}

.grid_value_noedit {
    color: #000000 !important;
    /*filter: Alpha(opacity=60) !important;*/
    /*opacity: 0.6 !important;*/
    pointer-events: none;
    background: #dad9FF url(/bundles/pimcoreadmin/img/flat-color-icons/unlock.svg) center left/16px no-repeat !important;
}

.grid_value_noedit > *{
    padding-left: 20px !important;
    opacity: 0.6 !important;
}
.grid_value_noedit:empty{
    background-position: center center;
}

.grid_value_locked {
    color: #606060 !important;
    filter: Alpha(opacity=60) !important;
    opacity: 0.6 !important;
    background: #dad9d9 url(/bundles/pimcoreadmin/img/locked.png) top left no-repeat !important;
}


.grid_value_inherited_locked {
    color: #606060 !important;
    filter: Alpha(opacity=60) !important;
    opacity: 0.6 !important;
    background: #dad9d9 url(/bundles/pimcoreadmin/img/inheritance-indicator-locked.png) top left no-repeat !important;
    opacity: 0.6 !important;
}

.grid_cbx_noteditable {
    color: gray !important;
    filter: Alpha(opacity=60) !important;
    opacity: 0.6 !important;
    pointer-events: none;
}

.pimcore_open_inheritance_source {
    position:absolute;
    left:0;
    top: 0px;
    width: 10px;
    height:10px;
    z-index:1000;
    cursor:pointer;
    background:url(/bundles/pimcoreadmin/img/inheritance-indicator.png) top left no-repeat;
    pointer-events: all !important;
}

.asset_folder_preview {
    font-size: 11px;
}

.asset_folder_preview .thumb-wrap{
    float: left;
    width: 250px;
    height: 250px;
    margin: 4px;
    margin-right: 0;
    padding: 5px;
    background: #ececec;
    cursor: pointer;
    position: relative;
    overflow: hidden;
}

.asset_folder_preview .thumb{
    width: 250px;
    max-height: 220px;
}

.asset_folder_preview .filename {
    display: block;
    overflow: hidden;
    text-align: center;
    width: 250px;
    position: absolute;
    bottom: 3px;
    left: 0;
}

.asset_folder_preview .x-view-over{
    border:1px solid #dddddd;
    background: #efefef;
    padding: 4px;
}

.asset_folder_preview .x-view-selected{
    background: #eff5fb;
    border:1px solid #99bbe8;
    padding: 4px;
}

.asset_folder_preview .x-view-selected .thumb{
    background:transparent;
}

.asset_folder_preview .loading-indicator {
    font-size:11px;
    padding-left:20px;
    margin:10px;
}


.pimcore_analytics_filter_form_item {
    margin: 0 30px 0 0;
}

.pimcore_extra_label {
    font-size: 10px;
}

.pimcore_extra_label_bottom {
    font-size: 10px;
    padding-bottom: 30px;
}

.pimcore_extra_label_headline {
    font-weight: bold;
    padding-top: 25px;
}


/* PLUGINS */
#downloadable_plugins,#available_plugins {
    background-color: #fff;
    text-shadow: #fff 0 1px 0;
}

#downloadable_plugins ul ,#available_plugins ul {
    position: relative;
    display: block;
    height: auto;
    font-size: 85%;
}

#downloadable_plugins ul li img,
#available_plugins ul li img{
    margin-bottom: 1px;
}
/* ... */

